--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-node_modules/
-dist/
+node_modules
+bundle.js
+npm-debug.log
+.DS_Store
+
+# IntelliJ
+*.iml
+/.idea
+ClientApplication/builds/
+ClientApplication/installers/
