--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "AdLoaderTestApp",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "3d map app application for monitoring purpose called adloadertestapp",
-  "main": "electron.js",
+  "main": "index.js",
   "scripts": {
-    "start": "electron ./electron.js",
-    "build": "electron-packager . --overwrite --asar=true --electron-version=1.6.10 --platform=win32 --arch=x64 --icon=assets/icon.png --prune=true --out=build",
-    "install": "node createinstaller.js",
-    "package": "npm run build && npm run install"
+    "start": "electron ./index.js",
+    "build": "electron-packager . --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icon.png --prune=true --out=build",
+    "create-installer": "node createinstaller.js",
+    "package": "npm run build && npm run create-installer"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,8 @@
   "author": "seb",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.6.10",
+    "electron": "1.3.3",
+    "electron-debug": "^1.2.0",
     "electron-packager": "^8.7.1",
     "electron-prebuilt": "^1.4.13",
     "electron-squirrel-startup": "^1.0.0"
