--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron-debug": "^1.2.0",
     "electron-packager": "^8.7.1",
     "electron-prebuilt": "^1.4.13",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "node-ipc": "^9.0.1"
   },
   "devDependencies": {
     "electron-winstaller": "^2.5.2"
